feat: add configurable tick in seconds and series length